# 1d_shocktube

./: 1d_shocktube-doc-ford-settings.md  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.f90  runtime_parameters.f90
tests/: CMakeLists.txt
tests/runtime_parameters/: CMakeLists.txt  correct.txt  error.txt  test_runtime_parameters.f90
